agregamos mas cosas en clase

--- a/TESHApp/Views/Shared/_Layout.cshtml
+++ b/TESHApp/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
         <footer>
             <p>&copy; 2019 - TESHApp</p>
         </footer>
+        <partial name="vistaparcial" />
     </div>
 
     <environment include="Development">
